<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/pro"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/programe" />
        <item
            android:id="@+id/tv_shedule"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/tv_shedule" />
        <item
            android:id="@+id/live"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Live Tv"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools"
            tools:ignore="HardcodedText" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
